--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
     <meta property="twitter:url" content="https://uxnicorp.com/" />
     <meta property="twitter:title" content="Desarrollo Web Argentina | Programadores & Agencia Web" />
     <meta property="twitter:description" content="Agencia de desarrollo web y programación. Programadores expertos en React, Node.js. Creamos páginas web, e-commerce y sistemas profesionales" />
-    <meta property="twitter:image" content="https://uxnicorp.com/twitter-image.jpg" />
+    <meta property="twitter:image" content="https://uxnicorp.com/og-image.jpg" />
     <meta property="twitter:image:alt" content="UXnicorp - Desarrollo Web" />
     <meta property="twitter:creator" content="@uxnicorp" />
     <meta property="twitter:site" content="@uxnicorp" />
+    
+    <!-- Discord/Embed Meta Tags -->
+    <meta name="theme-color" content="#f37aa6" />
+    <meta property="og:image:type" content="image/jpeg" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://uxnicorp.com/" />
