--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://uxnicorp.com/" />
     <meta property="og:site_name" content="UXnicorp - Desarrollo Web Argentina" />
-    <meta property="og:title" content="Desarrollo Web Argentina | Programadores & Agencia Web Profesional" />
+    <meta property="og:title" content="Desarrollo Web Argentina | Agencia de Programación Web Profesional" />
     <meta property="og:description" content="⭐ Agencia de desarrollo web profesional. Programadores expertos en React, Node.js. Creamos tu página web, e-commerce o sistema a medida. Presupuesto gratis 🚀" />
     <meta property="og:image" content="https://uxnicorp.com/og-image.jpg" />
     <meta property="og:image:alt" content="UXnicorp - Agencia de Desarrollo Web en Argentina" />
@@ -52,7 +52,7 @@
     <!-- Twitter Cards -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://uxnicorp.com/" />
-    <meta property="twitter:title" content="Desarrollo Web Argentina | Programadores & Agencia Web" />
+    <meta property="twitter:title" content="Desarrollo Web Argentina | Agencia de Programación Web" />
     <meta property="twitter:description" content="Agencia de desarrollo web y programación. Programadores expertos en React, Node.js. Creamos páginas web, e-commerce y sistemas profesionales" />
     <meta property="twitter:image" content="https://uxnicorp.com/og-image.jpg" />
     <meta property="twitter:image:alt" content="UXnicorp - Desarrollo Web" />
