--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Página No Encontrada | UXnicorp</title>
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://uxnicorp.com/404">
+    <link rel="canonical" href="https://www.uxnicorp.com.ar/404">
     <style>
         * {
             margin: 0;
